--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -27,14 +27,14 @@
         android:layout_height="wrap_content"
         android:inputType="textPersonName"
         android:ems="10"
-        android:layout_below="@+id/instagramLogoImageView"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="81dp"
+        android:layout_marginTop="47dp"
         android:id="@+id/userNameLogInEditText"
         android:labelFor="@+id/userNameLogInEditText"
         android:textSize="24sp"
         android:textAlignment="center"
-        android:hint="@string/userNameLoginEditText" />
+        android:hint="@string/userNameLoginEditText"
+        android:layout_below="@+id/instagramLogoImageView"
+        android:layout_alignParentStart="true" />
 
     <EditText
         android:layout_width="match_parent"
@@ -50,16 +50,19 @@
         android:textSize="24sp"
         android:hint="@string/userPasswordLoginEditText" />
 
-    <Button
-        android:layout_width="wrap_content"
+    <EditText
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/signUpButton"
+        android:inputType="textEmailAddress"
+        android:ems="10"
+        android:layout_marginTop="16dp"
+        android:id="@+id/userEmailLoginEditText"
+        android:hint="@string/userEmailLoginEditText"
+        android:textSize="24sp"
+        android:textAlignment="center"
         android:layout_below="@+id/userPasswordLogInEditText"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="19dp"
-        android:textSize="20sp"
-        android:text="@string/signUpButton"
-        android:onClick="signUp" />
+        android:layout_alignParentStart="true"
+        android:visibility="invisible" />
 
     <TextView
         android:text="@string/changeSignUpTextView"
@@ -72,4 +75,16 @@
         android:layout_toEndOf="@+id/signUpButton"
         android:layout_marginStart="12dp"
         android:textColor="@color/colorAccent" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/signUpButton"
+        android:layout_marginTop="37dp"
+        android:textSize="20sp"
+        android:text="@string/signUpButton"
+        android:onClick="signUp"
+        android:layout_below="@+id/userEmailLoginEditText"
+        android:layout_centerHorizontal="true" />
+
 </RelativeLayout>
