--- a/app/src/main/res/menu/home_view.xml
+++ b/app/src/main/res/menu/home_view.xml
@@ -2,7 +2,11 @@
 xmlns:app="http://schemas.android.com/apk/res-auto"
 xmlns:tools="http://schemas.android.com/tools"
 tools:context="com.tricloudcommunications.ce.instagramclone.HomeViewActivity">
-<item
+    <item android:title="@string/share_view_action_settings"
+        android:id="@+id/share_view_action_settings"
+        app:showAsAction="always"
+        android:icon="@drawable/ic_share_white_24dp" />
+    <item
     android:id="@+id/home_view_action_settings"
     android:orderInCategory="100"
     android:title="@string/home_view_action_settings"
