--- a/app/src/main/res/layout/content_user_feed.xml
+++ b/app/src/main/res/layout/content_user_feed.xml
@@ -14,11 +14,17 @@
     tools:showIn="@layout/activity_user_feed"
     android:padding="0dp">
 
-    <LinearLayout
-        android:orientation="vertical"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_centerVertical="true"
-        android:layout_alignParentStart="true"
-        android:id="@+id/linearLayout"></LinearLayout>
+        android:layout_height="match_parent">
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_alignParentStart="true"
+            android:id="@+id/linearLayout"></LinearLayout>
+    </ScrollView>
+
 </RelativeLayout>
